--- a/基本变量与类型.md
+++ b/基本变量与类型.md
@@ -84,11 +84,11 @@ Go语言的字符有以下两种类型：
 |转义符|含义  |
 |--|--|
 |\n  |  匹配换行符|
-|\r\ |   匹配回车符                 |
+|\r |   匹配回车符                 |
 |\t  |   匹配制表符                  |
-|\’|      匹配单引号                   |
-|\" |   匹配双引号                     |
-|\\|    匹配反斜杠                       |
+|\ ’|      匹配单引号                   |
+|\ " |   匹配双引号                     |
+|\ \ |    匹配反斜杠                       |
 ### 布尔型
 只有两个值：true和false
 ### 数据类型判断
